# mlb-hit-prediction

./: README.md  pyproject.toml
data/: all_pitcher_data.csv  cleaned_batter_data.csv  cleaned_pitcher_data.csv  combine_data_raw.csv  final_data_no_scale.csv  pitcher_lookup_table.csv  qualified_red_sox_id_table.csv  scaled_final_data.csv
src/: DATA_COLLECTION.ipynb  DATA_PREPROCESS.ipynb  DATA_PROCESSING.ipynb  MODEL_CREATION.ipynb
