[project]
name = "cs5100-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "missingno>=0.5.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pybaseball>=2.2.7",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]
